--- a/https_web_server/Makefile
+++ b/https_web_server/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 CPPFLAGS= -I. -I./include 
 CFLAGS=-Wall 
-LIBS=-lpthread -levent -lm -lssl -lcrypto -levent_openssl -lcurl
+LIBS=-lpthread -levent -lm -lssl -lcrypto -levent_openssl -lcurl -luuid
 
 #找到当前目录下所有的.c文件
 src = $(wildcard *.c)
