--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         android:roundIcon="@mipmap/subway_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.login.RegistActivity"></activity>
+        <activity android:name=".ui.Line1Activity"></activity>
+        <activity android:name=".ui.login.RegistActivity" />
 
         <meta-data
             android:name="com.amap.api.v2.apikey"
@@ -51,6 +52,5 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
-
 
 </manifest>
