--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         android:roundIcon="@mipmap/subway_app_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".ui.station.line1.Line1_fdzmy_Activity"></activity>
+        <activity android:name=".ui.station.line1.Line1_sll_Activity" />
+        <activity android:name=".ui.station.line1.Line1_bh_Activity" />
+        <activity android:name=".ui.station.line1.Line1_fhslgy_Activity" />
         <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,10 +34,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.Line4Activity" />
-        <activity android:name=".ui.Line3Activity" />
-        <activity android:name=".ui.Line2Activity" />
-        <activity android:name=".ui.Line1Activity" />
         <activity android:name=".ui.login.RegistActivity" />
 
         <meta-data
@@ -42,9 +42,7 @@
 
         <service android:name="com.amap.api.location.APSService" />
 
-        <activity android:name=".ui.login.LoginActivity">
-
-        </activity> <!-- 主界面 -->
+        <activity android:name=".ui.login.LoginActivity" /> <!-- 主界面 -->
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
